# Togay_Tunca_CV_0625

./: .gitignore  README.md  cv_to_pdf_converter.py  cv_word_english_v2.html  cv_word_english_v3.html  cv_word_turkish_v3.html  deploy-to-github.sh  hello.py  index.html  margin-test.html  pdf_styles.css  pyproject.toml  requirements_dev2.txt  update_job_format.py
archive/: cv_word_english.html  cv_word_turkish.html
