[project]
name = "togay-tunca-cv-0625"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli==1.1.0",
    "cffi==1.17.1",
    "cssselect2==0.8.0",
    "fonttools==4.58.2",
    "pdfkit==1.0.0",
    "pillow==11.2.1",
    "pycparser==2.22",
    "pydyf==0.11.0",
    "pyphen==0.17.2",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "weasyprint==65.1",
    "webencodings==0.5.1",
    "zopfli==0.2.3.post1",
]
